--- a/My_Education.html
+++ b/My_Education.html
@@ -14,8 +14,19 @@
   <body>
     <!-- header start -->
         <div id="header" class="section">
-            <p><a href="index.html">Stanislav Fedenev</a></p>
-            <p>automation engineer</p>
+            <p>Stanislav Fedenev
+            <br>automation engineer</p>
+            <nav class="navigation">
+              <table>
+                <tr>
+                  <td><a href="index.html"><div class="nav_btn">Main page</div></a></td>
+                  <td><a href="My_Main_Skills.html"><div class="nav_btn">My Main Skills</div></a></td>
+                  <td><a href="#"><div class="nav_btn">SIEMENS</div></a></td>
+                  <td><a href="#"><div class="nav_btn">Allen Bradley</div></a></td>
+                  <td><a href="#"><div class="nav_btn">ABB</div></a></td>
+                </tr>
+              </table>
+            </nav>
         </div>
     <!-- header end -->
     <!-- main start -->
@@ -25,9 +36,9 @@
       <div class="section">
         <h3>Higher and secondary education</h3>
         <div class="section">
-          <table>
+          <table class="edc_tab">
             <tr>
-              <th>the name of the educational institution and the specialty received</th>
+              <th>name of the educational institution and the specialty received</th>
               <th>content</th>
               <th>qualification and diploma</th>
             </tr>
@@ -56,15 +67,13 @@
               <td>Engineer</td>
             </tr>
           </table>
-
         </div>
-
       </div>
       <!-- Higher and secondary education end -->
       <!-- Digital Industry Academy start -->
       <div class="section">
         <h3>Digital Industry Academy</h3>
-        <table>
+        <table class="edc_tab">
           <caption>SIEMENS</caption>
           <tr>
             <th>course name</th>
@@ -294,7 +303,7 @@
             <td></td>
           </tr>
         </table>
-        <table>
+        <table class="edc_tab">
           <caption>Allen Bradley</caption>
           <tr>
             <th>course name</th>
@@ -317,8 +326,8 @@
               </ul>
             </td>
             <td>
-              <p><a target="_blank" href="sert/Allen_bradley/CertificatePdfServlet.pdf">Sertificat</a></p>
-              <p><a href="sert/Allen_bradley/CertificatePdfServlet.pdf" download>Dowload</a></p>
+              <div  class="btn_sm"><a target="_blank" href="sert/Allen_bradley/CertificatePdfServlet.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/Allen_bradley/CertificatePdfServlet.pdf" download>Dowload</a></div>
             </td>
           </tr>
           <tr>
@@ -335,7 +344,10 @@
                 <li>Separating the Procedure from Equipment Control in a Studio 5000 Logix Designer Project</li>
               </ul>
             </td>
-            <td><p><a target="_blank" href="sert/Allen_bradley/CertificatePdfServlet2.pdf">Sertificat</a></p></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/Allen_bradley/CertificatePdfServlet2.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/Allen_bradley/CertificatePdfServlet2.pdf" download>Dowload</a></div>
+            </td>
           </tr>
           <tr>
             <td>CCP143 Studio 5000 Logix Designer Level 3:<br> Project Development</td>
@@ -356,10 +368,13 @@
                 <li>Identifying and Correcting Faults in a Logix 5000 System</li>
               </ul>
             </td>
-            <td><p><a target="_blank" href="sert/Allen_bradley/CertificatePdfServlet3.pdf">Sertificat</a></p></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/Allen_bradley/CertificatePdfServlet3.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/Allen_bradley/CertificatePdfServlet3.pdf" download>Dowload</a></div>
+            </td>
           </tr>
         </table>
-        <table>
+        <table class="edc_tab">
           <caption>ABB</caption>
           <tr>
             <th>course name</th>
