--- a/My_Main_Skills.html
+++ b/My_Main_Skills.html
@@ -14,8 +14,18 @@
   <body>
     <!-- header start -->
         <div id="header" class="section">
-            <p><a href="index.html">Stanislav Fedenev</a></p>
-            <p>automation engineer</p>
+            <p>Stanislav Fedenev
+            <br>automation engineer</p>
+            <nav class="navigation">
+              <table>
+                <tr>
+                  <td><a href="index.html"><div class="nav_btn">Main page</div></a></td>
+                  <td><a href="My_Education.html"><div class="nav_btn">My Education</div></a></td>
+                  <!-- <td><a href="#contact"><div class="nav_btn">Contact Me</div></a></td>
+                  <td><a href="#Follow_Me"><div class="nav_btn">Follow Me</div></a></td> -->
+                </tr>
+              </table>
+            </nav>
         </div>
     <!-- header end -->
     <!--main start-->
