--- a/My_Education.html
+++ b/My_Education.html
@@ -52,8 +52,8 @@
             <tr>
               <td><a href="https://urfu.ru/ru" target="_blank"> Ural Federal University named after the First President of Russia B. N. Yeltsin</a><br>Energy supply of enterprises</td>
               <td>
-                <p>The energy supply of enterprises provides for a set of tools and methods designed to develop and use installations and systems that produce, transform, distribute and consume heat, electricity and other types of energy that ensure the functioning of industrial enterprises.
-                 <br>During the study at the university, the following topics were successfully mastered:</p>
+                <p>The energy supply of enterprises provides for a set of tools and methods designed to develop and use installations and systems that produce, transform, distribute and consume heat, electricity and other types of energy that ensure the functioning of industrial enterprises.</p>
+                 <p>During the study at the university, the following topics were successfully mastered:</p>
                   <ul>
                   <li>Design and operation of electrical equipment of stations and substations, electrical systems and power supply systems</li>
                   <li>Protection and automation of power systems</li>
@@ -393,7 +393,10 @@
                 <li>ACS880-01/11/31 industrial drive technical details</li>
               </ul>
             </td>
-            <td></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/ABB/1642065125003_lxpdownloadcertificate.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/ABB/1642065125003_lxpdownloadcertificate.pdf" download>Dowload</a></div>
+            </td>
           </tr>
           <tr>
             <td>F115E Softstarters Made Easy</td>
@@ -405,7 +408,10 @@
                 <li>Diagnostics and elimination of errors and malfunctions</li>
               </ul>
             </td>
-            <td></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/ABB/1642059297085_lxpdownloadcertificate.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/ABB/1642059297085_lxpdownloadcertificate.pdf" download>Dowload</a></div>
+            </td>
           </tr>
           <tr>
             <td></td>
