--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="shortcut icon"
     href="IMG_20200918_214625_653.ico" type="image/x-icon">
   </head>
   <body>
     <!-- header start -->
-        <div id="header" class="section">
+        <header>
             <p>Stanislav Fedenev
             <br>automation engineer</p>
             <nav class="navigation">
@@ -25,20 +28,8 @@
                 </tr>
               </table>
             </nav>
-        </div>
+        </header>
     <!-- header end -->
-    <!-- nav start -->
-    <!-- <nav class="navigation">
-      <table>
-        <tr>
-          <td><a href="My_Main_Skills.html"><input type="button" value = "My Main Skills"></a></td>
-          <td><a href="My_Education.html"><input type="button" value = "My Education"></a></td>
-          <td><a href="#contact"><input type="button" value = "Contact Me"></a></td>
-          <td><a href="#follow me"><input type="button" value = "Follow Me"></a></td>
-        </tr>
-      </table>
-    </nav> -->
-    <!-- nav end -->
     <main>
     <!-- About Me section start -->
         <div class="section">
@@ -129,11 +120,14 @@
         </div>
       </div>
     </main>
+    <div class="test">
+
+    </div>
     <!-- Contacts section end -->
 
-      <div class="copyright">
+      <footer>
           &copy; 2022 My Blog. All rights reserved.
-      </div>
+      </footer>
 
   </body>
 </html>
