--- a/My_Education.html
+++ b/My_Education.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <!-- header start -->
-        <div id="header" class="section">
+        <header>
             <p>Stanislav Fedenev
             <br>automation engineer</p>
             <nav class="navigation">
@@ -27,7 +27,7 @@
                 </tr>
               </table>
             </nav>
-        </div>
+        </header>
     <!-- header end -->
     <!-- main start -->
     <main>
@@ -35,19 +35,20 @@
       <!-- Higher and secondary education start -->
       <div class="section">
         <h3>Higher and secondary education</h3>
-        <div class="section">
+        <div class="section_HaSE">
           <table class="edc_tab">
-            <tr>
+            <!-- <tr>
               <th>name of the educational institution and the specialty received</th>
               <th>content</th>
               <th>qualification and diploma</th>
-            </tr>
+            </tr> -->
             <tr>
               <td><a href="https://agrokolledg.uralschool.ru" target="_blank">Krasnoufimsk Agricultural College</a><br>Electrification and automation of agriculture</td>
               <td>
                 <p>Comprehensive training in the field of electrical and electrical engineering consists in the study of a number of disciplines related to the theoretical and practical development of the fundamentals of automation and mechanization of agriculture, the arrangement of power supply systems for agricultural organizations. One of the most important practical skills acquired during the training is the practice of installing, adjusting and using electrical equipment and electrical products based on agricultural production.</p>
               </td>
-              <td>Electrical technician</td>
+              <td>Electrical technician<br>
+              <div class="btn_sm"><a href="sert/SIEMENS/MDQualifying_IndustrialSectorsandApplications.pdf" download>Dowload</a></div></td>
             </tr>
             <tr>
               <td><a href="https://urfu.ru/ru" target="_blank"> Ural Federal University named after the First President of Russia B. N. Yeltsin</a><br>Energy supply of enterprises</td>
@@ -64,17 +65,20 @@
                   <li>Intelligent electrical equipment and automation of buildings and structures</li>
                   </ul>
               </td>
-              <td>Engineer</td>
+              <td>Engineer<br>
+              <div class="btn_sm"><a href="sert/SIEMENS/MDQualifying_IndustrialSectorsandApplications.pdf" download>Dowload</a></div></td>
             </tr>
           </table>
         </div>
       </div>
       <!-- Higher and secondary education end -->
       <!-- Digital Industry Academy start -->
-      <div class="section">
+
         <h3>Digital Industry Academy</h3>
-        <table class="edc_tab">
-          <caption>SIEMENS</caption>
+        <div class="section_DIA">
+        <div class="siemesn_tab">
+          <table class="edc_tab">
+          <!-- <caption>SIEMENS</caption> -->
           <tr>
             <th>course name</th>
             <th>content</th>
@@ -97,7 +101,10 @@
                 <li>Overview of product portfolio</li>
               </ul>
             </td>
-            <td></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/SIEMENS/MDQualifying_IndustrialSectorsandApplications.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/SIEMENS/MDQualifying_IndustrialSectorsandApplications.pdf" download>Dowload</a></div>
+            </td>
           </tr>
           <tr><!--Basics of Drives - Motors-->
             <td>Basics of Drives - Motors</td>
@@ -126,7 +133,10 @@
                 </li>
               </ul>
             </td>
-            <td></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/SIEMENS/Basicofmotors.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/SIEMENS/Basicofmotors.pdf" download>Dowload</a></div>
+            </td>
           </tr>
           <tr><!--SIMARIS configuration-->
             <td>SIMARIS configuration</td>
@@ -138,7 +148,10 @@
                 <li>Conclusion</li>
               </ul>
             </td>
-            <td></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/SIEMENS/SIMARISconfiguration.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/SIEMENS/SIMARISconfiguration.pdf" download>Dowload</a></div>
+            </td>
           </tr>
           <tr><!--3TM Vacuum Contactors-->
             <td>3TM Vacuum Contactors</td>
@@ -149,7 +162,10 @@
                 <li>3TM in a Nutshell</li>
               </ul>
             </td>
-            <td></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/SIEMENS/3TMVacuumContactors.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/SIEMENS/3TMVacuumContactors.pdf" download>Dowload</a></div>
+            </td>
           </tr>
           <tr><!--Profinet-->
             <td>PROFINET</td>
@@ -165,7 +181,10 @@
                 <li>Security</li>
               </ul>
             </td>
-            <td></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/SIEMENS/PROFINET.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/SIEMENS/PROFINET.pdf" download>Dowload</a></div>
+            </td>
           </tr>
           <tr><!--Power Monitoring with SENTRON-->
             <td>Power Monitoring with SENTRON</td>
@@ -178,7 +197,10 @@
                 <li>Energy management in brief</li>
               </ul>
             </td>
-            <td></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/SIEMENS/PowerMonitoringwithSENTRON.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/SIEMENS/PowerMonitoringwithSENTRON.pdf" download>Dowload</a></div>
+            </td>
           </tr>
           <tr><!--Data communication with Industrial Ethernet-->
             <td>Data communication with Industrial Ethernet</td>
@@ -207,7 +229,10 @@
                 </li>
               </ul>
             </td>
-            <td></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/SIEMENS/DatacommunicationwithIndustrialEthernet.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/SIEMENS/DatacommunicationwithIndustrialEthernet.pdf" download>Dowload</a></div>
+            </td>
           </tr>
           <tr><!--SIMATIC TIA Portal Structured Programming-->
             <td>SIMATIC TIA Portal Structured Programming</td>
@@ -227,7 +252,10 @@
                 <li>Introduction to the programming language GRAPH</li>
               </ul>
             </td>
-            <td></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/SIEMENS/TIAPortalStructuredProgramming.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/SIEMENS/TIAPortalStructuredProgramming.pdf" download>Dowload</a></div>
+            </td>
           </tr>
           <tr><!--3VA molded case circuit breaker-->
             <td>3VA molded case circuit breaker</td>
@@ -239,7 +267,10 @@
                 <li>Elevator Pitch (summary)</li>
               </ul>
             </td>
-            <td></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/SIEMENS/3VAmoldedcasecircuitbreaker.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/SIEMENS/3VAmoldedcasecircuitbreaker.pdf" download>Dowload</a></div>
+            </td>
           </tr>
           <tr><!--Process control engineering for beginner-->
             <td>Process control engineering for beginner</td>
@@ -251,7 +282,10 @@
                 <li>Operator control and monitoring</li>
               </ul>
             </td>
-            <td></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/SIEMENS/Processcontrolengineeringforbeginner.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/SIEMENS/Processcontrolengineeringforbeginner.pdf" download>Dowload</a></div>
+            </td>
           </tr>
           <tr><!--PLCs for beginners-->
             <td>PLCs for beginners</td>
@@ -269,7 +303,10 @@
                 <li>Creating a PLC program</li>
               </ul>
             </td>
-            <td></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/SIEMENS/PLCsforbeginners.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/SIEMENS/PLCsforbeginners.pdf" download>Dowload</a></div>
+            </td>
           </tr>
           <tr><!--Basics of Drives - Converters-->
             <td>Basics of Drives - Converters</td>
@@ -300,11 +337,16 @@
                 </li>
               </ul>
             </td>
-            <td></td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/SIEMENS/BasicsofDrives_Converters.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/SIEMENS/BasicsofDrives_Converters.pdf" download>Dowload</a></div>
+            </td>
           </tr>
         </table>
+        </div>
+        <div class="ra_tab">
         <table class="edc_tab">
-          <caption>Allen Bradley</caption>
+          <!-- <caption>Allen Bradley</caption> -->
           <tr>
             <th>course name</th>
             <th>content</th>
@@ -374,8 +416,10 @@
             </td>
           </tr>
         </table>
+      </div>
+      <div class="abb_tab">
         <table class="edc_tab">
-          <caption>ABB</caption>
+          <!-- <caption>ABB</caption> -->
           <tr>
             <th>course name</th>
             <th>content</th>
@@ -414,49 +458,47 @@
             </td>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>ACS880-01 Learning Program_CQP</td>
+            <td>
+              <ul>
+                <li>AC drives general installation practices</li>
+                <li>All-compatible industrial drives, acs880 series offering</li>
+                <li>All-compatible panel fundamentals</li>
+                <li>Drive composer entry fundamentals</li>
+                <li>ACS880-01/11/31 installation and startup</li>
+                <li>ACS880-01/11/31 industrial drive technical details</li>
+              </ul>
+            </td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/ABB/1642065125003_lxpdownloadcertificate.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/ABB/1642065125003_lxpdownloadcertificate.pdf" download>Dowload</a></div>
+            </td>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>F115E Softstarters Made Easy</td>
+            <td>
+              <ul>
+                <li>The principle of operation and application of softstarters</li>
+                <li>Identify softstarters key advantages over other starting methods</li>
+                <li>Connection and commissioning</li>
+                <li>Diagnostics and elimination of errors and malfunctions</li>
+              </ul>
+            </td>
+            <td>
+              <div  class="btn_sm"><a target="_blank" href="sert/ABB/1642059297085_lxpdownloadcertificate.pdf">Sertificat</a></div>
+              <div class="btn_sm"><a href="sert/ABB/1642059297085_lxpdownloadcertificate.pdf" download>Dowload</a></div>
+            </td>
           </tr>
-
-
         </table>
-        <!-- <ul>
-            <li>SIEMENS
-              <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-              </ul>
-            </li>
-            <li>Allen-Bradley
-              <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-              </ul>
-            </li>
-            <li>ABB
-              <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-              </ul>
-            </li>
-        </ul> -->
+      </div>
       </div>
       <!-- Digital Industry Academy end -->
     </main>
     <!-- main end -->
     <!-- copyright start -->
-    <div class="copyright">
+    <footer>
         &copy; 2022 My Blog. All rights reserved.
-    </div>
+    </footer>
     <!-- copyright end -->
   </body>
 </html>
