--- a/My_Education.html
+++ b/My_Education.html
@@ -36,12 +36,46 @@
       <div class="section">
         <h3>Higher and secondary education</h3>
         <div class="section_HaSE">
-          <table class="edc_tab">
-            <!-- <tr>
+          <div class="edc_grid">
+            <div class="edc_item item_1">
+              <a href="https://agrokolledg.uralschool.ru" target="_blank">Krasnoufimsk Agricultural College</a><br>Electrification and automation of agriculture
+            </div>
+            <div class="edc_item item_2">
+              <p>Comprehensive training in the field of electrical and electrical engineering consists in the study of a number of disciplines related to the theoretical and practical development of the fundamentals of automation and mechanization of agriculture, the arrangement of power supply systems for agricultural organizations. One of the most important practical skills acquired during the training is the practice of installing, adjusting and using electrical equipment and electrical products based on agricultural production.</p>
+            </div>
+            <div class="edc_item item_3">
+              Electrical technician<br>
+              <div class="btn_sm"><a href="sert/SIEMENS/MDQualifying_IndustrialSectorsandApplications.pdf" download>Dowload</a></div>
+            </div>
+          </div>
+          <div class="edc_grid">
+            <div class="edc_item item_1">
+              <a href="https://urfu.ru/ru" target="_blank"> Ural Federal University named after the First President of Russia B. N. Yeltsin</a><br>Energy supply of enterprises
+            </div>
+            <div class="edc_item item_2">
+              <p>The energy supply of enterprises provides for a set of tools and methods designed to develop and use installations and systems that produce, transform, distribute and consume heat, electricity and other types of energy that ensure the functioning of industrial enterprises.</p>
+               <p>During the study at the university, the following topics were successfully mastered:</p>
+                <ul>
+                <li>Design and operation of electrical equipment of stations and substations, electrical systems and power supply systems</li>
+                <li>Protection and automation of power systems</li>
+                <li>High-voltage electrical apparatus</li>
+                <li>Electrical machines and transformers</li>
+                <li>Electrotechnological equipment and electrical facilities of industrial enterprises</li>
+                <li>Electric power industry on renewable sources</li>
+                <li>Intelligent electrical equipment and automation of buildings and structures</li>
+                </ul>
+            </div>
+            <div class="edc_item item_3">
+              Engineer<br>
+              <div class="btn_sm"><a href="sert/SIEMENS/MDQualifying_IndustrialSectorsandApplications.pdf" download>Dowload</a></div>
+            </div>
+          </div>
+          <!-- <table class="edc_tab">
+            <tr>
               <th>name of the educational institution and the specialty received</th>
               <th>content</th>
               <th>qualification and diploma</th>
-            </tr> -->
+            </tr>
             <tr>
               <td><a href="https://agrokolledg.uralschool.ru" target="_blank">Krasnoufimsk Agricultural College</a><br>Electrification and automation of agriculture</td>
               <td>
@@ -68,7 +102,7 @@
               <td>Engineer<br>
               <div class="btn_sm"><a href="sert/SIEMENS/MDQualifying_IndustrialSectorsandApplications.pdf" download>Dowload</a></div></td>
             </tr>
-          </table>
+          </table> -->
         </div>
       </div>
       <!-- Higher and secondary education end -->
