--- a/index.html
+++ b/index.html
@@ -32,27 +32,34 @@
     <!-- header end -->
     <main>
     <!-- About Me section start -->
-        <div class="section">
-            <h1><span>About Me</span></h1>
+    <h1><span>About Me</span></h1>
+        <div class="section_DCS">
+        <div class="edc_tab">
+
             <p>
                 Hey! I am Stas. Worked as an automation engineer on a drilling rig for 10 years. Lately I have started to study C# and HTML programming languages. In the future, I plan to completely change my type of activity and try myself in developing games on the unity engine or developing websites. I would be grateful to everyone who wants to share their experience with me or take me to my team for an internship.
             </p>
         </div>
+      </div>
     <!-- About Me section end -->
     <!-- My Main Skills section start -->
-        <div class="section">
-            <h2><span><a href="My_Main_Skills.html">My Main Skills</a></span></h2>
+
+        <h3><a href="My_Main_Skills.html">My Main Skills</a></h3>
+            <div class="section_DCS">
+            <div class="edc_tab">
               <ul>
                 <li>Drilling Control Systems and Rig Automation</li>
                 <li>Frequency converters</li>
                 <li>Programmable logic controllers</li>
                 <li>Schematic diagrams of automated control systems</li>
               </ul>
-      </div>
+            </div>
+            </div>
     <!-- My Main Skills section end -->
     <!-- My Education section start -->
-        <div class="section">
-            <h2><span><a href="My_Education.html">My Education</a></span></h2>
+            <h3><span><a href="My_Education.html">My Education</a></span></h3>
+            <div class="section_DCS">
+            <div class="edc_tab">
                 <ul>
                   <li><strong>Higher and secondary education</strong>
                   <ul>
@@ -68,11 +75,13 @@
                   </ul>
                 </li>
               </ul>
-      </div>
+            </div>
+            </div>
     <!-- My Education section end -->
     <!-- My Hobbies section start -->
-    <div class="section">
-        <h2><span>My Hobbies</span></h2>
+        <h3><span>My Hobbies</span></h3>
+        <div class="section_DCS">
+        <div class="edc_tab">
         <ul>
             <li>HTML <br />
                 <progress max="100" value="80"></progress>
@@ -84,18 +93,22 @@
                 <progress max="100" value="30"></progress>
             </li>
         </ul>
-    </div>
+      </div>
+      </div>
     <!-- My Hobbies section end -->
     <!-- Media section start -->
-    <div class="section">
-        <h2><span>My Media</span></h2>
+        <h3><span>My Media</span></h3>
+        <div class="section_DCS">
+        <div class="edc_tab">
         <video src="20191214_114045.mp4" width="320" height="180" controls
         poster = "IMG_20200918_214625_653.ico"></video>
-    </div>
+        </div>
+        </div>
     <!-- Media section end -->
     <!-- Form section start -->
-      <div class="section" id = "contact">
-        <h2><span>Contact Me</span></h2>
+      <h3><span>Contact Me</span></h3>
+      <div class="section_DCS" id = "contact">
+      <div class="edc_tab">
           <form>
             <input name="name" placeholder="Name" type="text" required /><br/>
             <input name="email" placeholder="Email" type="email" required /><br/>
@@ -103,11 +116,13 @@
             <input type="submit" value="Send message" class="btn_sm" />
           </form>
       </div>
+      </div>
    <!-- Form section end -->
    <!-- Contacts section start -->
-      <div class="section" id="Follow_Me">
-        <h2><span>Follow Me</span></h2>
-        <div>
+      <h3><span>Follow Me</span></h3>
+      <div class="section_DCS" id="Follow_Me">
+      <div class="edc_tab">
+
           <a href="https://www.linkedin.com/in/fedenevse/" target="_blank">
             <img alt="Linkedin" src="linkedin_icon-icons.com_59208(1).png" class="PNG" />
           </a>
@@ -117,7 +132,7 @@
           <a href="https://twitter.com/voiceisnot" target="_blank" class="PNG">
             <img alt="Twitter" src="twt.png" />
           </a>
-        </div>
+      </div>
       </div>
     </main>
     <div class="test">
